some design stuff

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -28,3 +28,18 @@ input[type="file"] {
 .flooraddbutton:hover {
     filter: brightness(90%);
 }
+
+.roboto-mono {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
